--- a/pages/More_Options/Dicas/Dicas.html
+++ b/pages/More_Options/Dicas/Dicas.html
@@ -6,7 +6,7 @@
     <title>Lore Space | Dicas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dicas.css">
+    <link rel="stylesheet" href="Dicas.css">
 </head>
 <body>
 
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <script src="dicas_dados.js"></script>
-    <script src="dicas.js"></script>
+    <script src="Dicas_dados.js"></script>
+    <script src="Dicas.js"></script>
 </body>
 </html>
