--- a/pages/More_Options/Dicas/Dicas.html
+++ b/pages/More_Options/Dicas/Dicas.html
@@ -18,7 +18,7 @@
                     <span class="logo-text">Lore Space</span>
                 </div>
                 <nav class="nav-menu">
-                    <a href="inicio.html" class="nav-item"><i class="fa-solid fa-house"></i> <span>Início</span></a>
+                    <a href="../../More_options.html" class="nav-item"><i class="fa-solid fa-house"></i> <span>Início</span></a>
                     <a href="#" class="nav-item active"><i class="fa-solid fa-clapperboard"></i> <span>Feed de Dicas</span></a>
                 </nav>
             </div>
@@ -67,7 +67,7 @@
     </div>
 
     <nav class="bottom-bar">
-        <a href="inicio.html" class="nav-link"><i class="fa-solid fa-house"></i></a>
+        <a href="../../More_options.html" class="nav-link"><i class="fa-solid fa-house"></i></a>
         <a href="#" class="nav-link active"><i class="fa-solid fa-clapperboard"></i></a>
     </nav>
 
