--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -135,7 +135,7 @@
                     </li>
                     
                     <li>
-                        <a href="./For_You.html" class="menu-item-link">
+                        <a href="./More-Options/Dicas/Dicas.html" class="menu-item-link">
                             <i data-lucide="lightbulb" class="w-5 h-5 mr-4 text-yellow-400"></i>
                             <span class="flex-grow">Dicas</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
