--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -17,71 +17,74 @@
                     <p>Go Home</p>
                 </a>
             </li>
-
-            <li class="section-title"><p>Criadores</p></li>
-            <li>
-                <a href="https://www.instagram.com/caio_borges0978?igsh=MXE0ZnBwNWtiaHY5aw==" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-user-astronaut"></i>
-                    <p>Caio Borges</p>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-user-tie"></i> 
-                    <p>Miqueias de Jesus</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-user-ninja"></i> 
-                    <p>Novo Criador 1</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-user-ghost"></i> 
-                    <p>Novo Criador 2</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-user-secret"></i> 
-                    <p>Novo Criador 3</p>
-                </a>
-            </li>
-
-            <hr>
-            <li class="section-title"><p>Perfis Oficiais</p></li>
-            <li>
-                <a href="https://instagram.com/sua_wiki" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                    <p>Instagram Oficial</p>
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com/sua_wiki" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <p>Twitter (X)</p>
-                </a>
-            </li>
-
-            <hr>
-            <li class="section-title"><p>Canais</p></li>
-            <li>
-                <a href="https://youtube.com/seu_canal" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                    <p>YouTube</p>
-                </a>
-            </li>
-            <li>
-                <a href="https://discord.gg/seu_convite" target="_blank">
-                    <i class="fab fa-discord"></i>
-                    <p>Comunidade Discord</p>
-                </a>
-            </li>
         </ul>
 
         <div class="dropdown-section">
+            
+            <div class="dropdown-container">
+                <div class="dropdown-header">
+                    <i class="fas fa-users"></i> Criadores
+                    <i class="fas fa-chevron-right arrow-icon"></i>
+                </div>
+                <div class="dropdown-content">
+                    <ul class="vertical-list">
+                        <li>
+                            <a href="https://www.instagram.com/caio_borges0978?igsh=MXE0ZnBwNWtiaHY5aw==" target="_blank">
+                                <i class="fas fa-user-astronaut"></i> <p>Caio Borges</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank">
+                                <i class="fas fa-user-tie"></i> <p>Miqueias de Jesus</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank"><i class="fas fa-user-ninja"></i> <p>Criador 3</p></a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank"><i class="fas fa-user-ghost"></i> <p>Criador 4</p></a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank"><i class="fas fa-user-secret"></i> <p>Criador 5</p></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="dropdown-container">
+                <div class="dropdown-header">
+                    <i class="fas fa-id-badge"></i> Perfis Oficiais
+                    <i class="fas fa-chevron-right arrow-icon"></i>
+                </div>
+                <div class="dropdown-content">
+                    <ul class="vertical-list">
+                        <li>
+                            <a href="#"><i class="fab fa-instagram"></i> <p>Instagram Oficial</p></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-twitter"></i> <p>Twitter (X)</p></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="dropdown-container">
+                <div class="dropdown-header">
+                    <i class="fas fa-tv"></i> Canais
+                    <i class="fas fa-chevron-right arrow-icon"></i>
+                </div>
+                <div class="dropdown-content">
+                    <ul class="vertical-list">
+                        <li>
+                            <a href="#"><i class="fab fa-youtube"></i> <p>YouTube</p></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-discord"></i> <p>Discord</p></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
             <div class="dropdown-container">
                 <div class="dropdown-header">
                      O que é a FanWiki?
@@ -97,6 +100,7 @@
                     </p>
                 </div>
             </div>
+
         </div>
     </div>
 
