--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -39,18 +39,18 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">
-                                <i class="fas fa-user-ninja"></i> <p>Criador 3</p>
+                            <a href="https://www.instagram.com/ph_designerarts?igsh=MWdqbWlvaDk4aHBoYQ==" target="_blank">
+                                <i class="fas fa-user-ninja"></i> <p>Paulo Henrique</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/m1ke_edits?igsh=bDBpcHpyemJkZG5h" target="_blank">
+                                <i class="fas fa-user-ghost"></i> <p>Miqueias</p>
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <i class="fas fa-user-ghost"></i> <p>Criador 4</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank">
-                                <i class="fas fa-user-robot"></i> <p>Criador 5</p>
+                                <i class="fas fa-user-robot"></i> <p>David</p>
                             </a>
                         </li>
                     </ul>
