--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -65,7 +65,7 @@
                 <div class="dropdown-content">
                     <ul class="vertical-list">
                         <li>
-                            <a href="#"><i class="fab fa-instagram"></i> <p>Instagram</p></a>
+                            <a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg=="><i class="fab fa-instagram"></i> <p>Instagram</p></a>
                         </li>
                         <li>
                             <a href="#"><i class="fab fa-twitter"></i> <p>Twitter (X)</p></a>
