--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">
+                            <a href="https://www.instagram.com/horosgamer80?igsh=MXgxdHU4bGJzajJ5cg==" target="_blank">
                                 <i class="fas fa-user-robot"></i> <p>David</p>
                             </a>
                         </li>
