--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -23,29 +23,35 @@
             
             <div class="dropdown-container">
                 <div class="dropdown-header">
-                    <i class="fas fa-users"></i> Criadores
+                    <i class="fas fa-paint-brush"></i> Criadores
                     <i class="fas fa-chevron-right arrow-icon"></i>
                 </div>
                 <div class="dropdown-content">
                     <ul class="vertical-list">
                         <li>
-                            <a href="https://www.instagram.com/caio_borges0978?igsh=MXE0ZnBwNWtiaHY5aw==" target="_blank">
+                            <a href="https://www.instagram.com/caio_borges0978?igsh=MXE0ZnBwNWtiaHY5aw==" target="_blank" rel="noopener noreferrer">
                                 <i class="fas fa-user-astronaut"></i> <p>Caio Borges</p>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank">
+                            <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank" rel="noopener noreferrer">
                                 <i class="fas fa-user-tie"></i> <p>Miqueias de Jesus</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fas fa-user-ninja"></i> <p>Criador 3</p></a>
+                            <a href="https://www.instagram.com/ph_designerarts?igsh=MWdqbWlvaDk4aHBoYQ==" target="_blank">
+                                <i class="fas fa-user-ninja"></i> <p>Paulo Henrique</p>
+                            </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fas fa-user-ghost"></i> <p>Criador 4</p></a>
+                            <a href="https://www.instagram.com/m1ke_edits?igsh=bDBpcHpyemJkZG5h" target="_blank">
+                                <i class="fas fa-user-ghost"></i> <p>Miqueias</p>
+                            </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fas fa-user-secret"></i> <p>Criador 5</p></a>
+                            <a href="https://www.instagram.com/horosgamer80?igsh=MXgxdHU4bGJzajJ5cg==" target="_blank">
+                                <i class="fas fa-user-robot"></i> <p>David</p>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -53,16 +59,19 @@
 
             <div class="dropdown-container">
                 <div class="dropdown-header">
-                    <i class="fas fa-id-badge"></i> Perfis Oficiais
+                    <i class="fas fa-id-card"></i> Perfis Oficiais
                     <i class="fas fa-chevron-right arrow-icon"></i>
                 </div>
                 <div class="dropdown-content">
                     <ul class="vertical-list">
                         <li>
-                            <a href="#"><i class="fab fa-instagram"></i> <p>Instagram Oficial</p></a>
+                            <a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg=="><i class="fab fa-instagram"></i> <p>Instagram</p></a>
                         </li>
                         <li>
                             <a href="#"><i class="fab fa-twitter"></i> <p>Twitter (X)</p></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-threads"></i> <p>Threads</p></a>
                         </li>
                     </ul>
                 </div>
@@ -70,13 +79,16 @@
 
             <div class="dropdown-container">
                 <div class="dropdown-header">
-                    <i class="fas fa-tv"></i> Canais
+                    <i class="fas fa-broadcast-tower"></i> Canais
                     <i class="fas fa-chevron-right arrow-icon"></i>
                 </div>
                 <div class="dropdown-content">
                     <ul class="vertical-list">
                         <li>
                             <a href="#"><i class="fab fa-youtube"></i> <p>YouTube</p></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-twitch"></i> <p>Twitch</p></a>
                         </li>
                         <li>
                             <a href="#"><i class="fab fa-discord"></i> <p>Discord</p></a>
@@ -87,16 +99,12 @@
 
             <div class="dropdown-container">
                 <div class="dropdown-header">
-                     O que é a FanWiki?
+                    <i class="fas fa-info-circle"></i> O que é a FanWiki?
                     <i class="fas fa-chevron-right arrow-icon"></i>
                 </div>
                 <div class="dropdown-content">
                     <p>
-                        A FanWiki é uma plataforma:
-                        <br><br>
-                        * Focada em um conjunto de universos como (séries, jogos, livros, etc.)<br>
-                        * O repositório definitivo de fatos e lore<br>
-                        * Um centro de conhecimento feito de fã, para fã.
+                        A FanWiki é uma plataforma focada em universos nerds, sendo o repositório definitivo de fatos e lore, feito de fã para fã.
                     </p>
                 </div>
             </div>
