--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -121,7 +121,7 @@
                     </li>
 
                     <li>
-                        <a href="./Tips.html" class="menu-item-link">
+                        <a href="./More_Options/Dicas/Dicas.html" class="menu-item-link">
                             <i data-lucide="lightbulb" class="w-5 h-5 mr-4 text-amber-400"></i>
                             <span class="flex-grow">Dicas</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
@@ -151,7 +151,7 @@
             
             <ul class="space-y-1">
                 <li>
-                    <a href="./More_Options/Games/Quebra-cabeça.html" class="modal-option">
+                    <a href="./More_Options/Games/Quebra_cabeça.html" class="modal-option">
                         <i data-lucide="puzzle" class="w-5 h-5 mr-4 text-yellow-300"></i>
                         <span class="flex-grow">Quebra-Cabeças</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
