--- a/pages/More_Options/Games/Snake.html
+++ b/pages/More_Options/Games/Snake.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Snake Pro - BlueViolet Edition</title>
+    <title>Snake</title>
     <style>
         * {
             margin: 0;
@@ -186,7 +186,7 @@
             <div class="button-group">
                 <button id="resume-btn" class="btn-ui btn-resume" onclick="resumeGame()">Continuar</button>
                 <button class="btn-ui" onclick="resetGame()">Reiniciar</button>
-                <a href="home.html" class="btn-ui btn-home">Voltar para Home</a>
+                <a href="../../More_options.html" class="btn-ui btn-home">Voltar para Home</a>
             </div>
         </div>
     </div>
