--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FanWiki-More options</title>
+    <title>FanWiki - More options</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -61,7 +61,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7); 
+            background-color: rgba(0, 0, 0, 0.8); 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -111,23 +111,6 @@
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="./Abaut.html" class="menu-item-link">
-                            <i data-lucide="info" class="w-5 h-5 mr-4" style="color: var(--spotify-color);"></i>
-                            <span class="flex-grow">Informações</span>
-                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="./More_Options/Dicas/Dicas.html" class="menu-item-link">
-                            <i data-lucide="lightbulb" class="w-5 h-5 mr-4 text-amber-400"></i>
-                            <span class="flex-grow">Dicas</span>
-                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
-                        </a>
-                    </li>
-
                     <li>
                         <div id="quiz-button" class="menu-item-link">
                             <i data-lucide="gamepad-2" class="w-5 h-5 mr-4 text-blue-400"></i>
@@ -141,7 +124,7 @@
     </div>
     
     <div id="quiz-modal" class="modal-overlay hidden">
-        <div class="modal-content p-4">
+        <div class="modal-content p-4 shadow-2xl">
             <div class="flex justify-between items-center mb-4">
                 <h3 class="text-lg font-bold text-white">Escolha um Mini-game</h3>
                 <button id="close-quiz-modal-button" class="text-[var(--text-color-muted)] hover:text-white">
@@ -151,16 +134,23 @@
             
             <ul class="space-y-1">
                 <li>
-                    <a href="./More_Options/Games/Quebra_cabeça.html" class="modal-option">
+                    <a href="./Games/Quebra_cabeça.html" class="modal-option">
                         <i data-lucide="puzzle" class="w-5 h-5 mr-4 text-yellow-300"></i>
                         <span class="flex-grow">Quebra-Cabeças</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="./More_Options/Games/Memory_game.html" class="modal-option">
+                    <a href="./Games/Memory_game.html" class="modal-option">
                         <i data-lucide="brain" class="w-5 h-5 mr-4 text-pink-300"></i>
                         <span class="flex-grow">Jogo de Memória</span>
+                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="./Games/Snake_game.html" class="modal-option">
+                        <i data-lucide="rat" class="w-5 h-5 mr-4 text-green-400"></i>
+                        <span class="flex-grow">Snake Game</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
