--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -134,21 +134,21 @@
             
             <ul class="space-y-1">
                 <li>
-                    <a href="./Games/Quebra_cabeça.html" class="modal-option">
+                    <a href="./More_Options/Games/Quebra_cabeça.html" class="modal-option">
                         <i data-lucide="puzzle" class="w-5 h-5 mr-4 text-yellow-300"></i>
                         <span class="flex-grow">Quebra-Cabeças</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="./Games/Memory_game.html" class="modal-option">
+                    <a href="./More_Options/Games/Memory_game.html" class="modal-option">
                         <i data-lucide="brain" class="w-5 h-5 mr-4 text-pink-300"></i>
                         <span class="flex-grow">Jogo de Memória</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="./Games/Snake_game.html" class="modal-option">
+                    <a href="./More_Options/Games/Snake.html" class="modal-option">
                         <i data-lucide="rat" class="w-5 h-5 mr-4 text-green-400"></i>
                         <span class="flex-grow">Snake Game</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
