--- a/pages/More_Options/Games/Snake.html
+++ b/pages/More_Options/Games/Snake.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Snake</title>
+    <title>Snake Neon - Mobile & Desktop</title>
     <style>
         * {
             margin: 0;
@@ -16,7 +16,7 @@
         body {
             background-color: #0a0a12;
             color: blueviolet;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             display: flex;
             height: 100vh;
             width: 100vw;
@@ -26,14 +26,18 @@
             position: relative;
             width: 100%;
             height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         canvas {
             background-color: #0d0d1a;
             display: block;
+            box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
         }
 
-        /* UI Superior (Score e Pause) */
+        /* --- UI Superior --- */
         #ui-overlay {
             position: absolute;
             top: 20px;
@@ -51,7 +55,6 @@
             font-size: 1.8rem;
             color: white;
             text-shadow: 0 0 10px blueviolet;
-            pointer-events: none;
         }
 
         .btn-pause {
@@ -69,7 +72,6 @@
         }
 
         .btn-pause:hover { background: rgba(138, 43, 226, 0.4); }
-
         .btn-pause::before, .btn-pause::after {
             content: "";
             width: 5px;
@@ -79,14 +81,14 @@
             border-radius: 2px;
         }
 
-        /* Modal de Menu (Pause / Game Over) */
+        /* --- Modais --- */
         #game-modal {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(10, 10, 18, 0.85);
+            background: rgba(10, 10, 18, 0.9);
             display: none;
             justify-content: center;
             align-items: center;
@@ -95,13 +97,13 @@
         }
 
         .modal-content {
-            background: rgba(138, 43, 226, 0.1);
+            background: rgba(138, 43, 226, 0.05);
             padding: 40px;
             border: 2px solid blueviolet;
             border-radius: 20px;
             text-align: center;
-            box-shadow: 0 0 40px rgba(138, 43, 226, 0.4);
-            min-width: 300px;
+            box-shadow: 0 0 40px rgba(138, 43, 226, 0.3);
+            min-width: 280px;
         }
 
         .modal-content h2 {
@@ -111,16 +113,11 @@
             text-shadow: 0 0 20px blueviolet;
         }
 
-        .modal-content p {
-            font-size: 1.3rem;
-            color: #ddd;
-            margin-bottom: 25px;
-        }
-
         .button-group {
             display: flex;
             flex-direction: column;
             gap: 12px;
+            margin-top: 20px;
         }
 
         .btn-ui {
@@ -140,34 +137,59 @@
         .btn-resume { background: blueviolet; }
         .btn-resume:hover { background: #9370DB; }
         .btn-home { color: blueviolet; }
-        .btn-home:hover { background: rgba(138, 43, 226, 0.15); }
 
-        /* Mobile Controls */
+        /* --- CONTROLES MOBILE (Ocultos no Desktop) --- */
         #mobile-controls {
-            display: none;
+            display: none; /* Escondido por padrão */
             position: absolute;
-            bottom: 30px;
-            right: 30px;
-            display: grid;
-            grid-template-areas: ". up ." "left . right" ". down .";
-            gap: 15px;
+            bottom: 40px;
+            right: 40px;
+            grid-template-areas: 
+                ". up ." 
+                "left . right" 
+                ". down .";
+            gap: 12px;
             z-index: 5;
         }
 
-        .ctrl-btn {
-            width: 65px; height: 65px; background: rgba(138, 43, 226, 0.1);
-            border: 2px solid blueviolet; border-radius: 50%; color: white;
-            display: flex; justify-content: center; align-items: center; font-size: 1.5rem;
+        /* Media Query: Só mostra os controles se for touch ou tela pequena */
+        @media (max-width: 1024px) or (pointer: coarse) {
+            #mobile-controls {
+                display: grid;
+            }
         }
-        .ctrl-btn:active { background: blueviolet; transform: scale(0.9); }
 
-        /* Rotate Notice */
+        .ctrl-btn {
+            width: 65px;
+            height: 65px;
+            background: rgba(138, 43, 226, 0.15);
+            border: 2px solid blueviolet;
+            border-radius: 50%;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.5rem;
+            user-select: none;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        .ctrl-btn:active {
+            background: blueviolet;
+            transform: scale(0.92);
+        }
+
+        /* --- Rotate Notice --- */
         #rotate-notice {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: #0a0a12; color: white; z-index: 1000; display: none;
             flex-direction: column; justify-content: center; align-items: center;
+            text-align: center; padding: 20px;
         }
-        .phone-icon { width: 40px; height: 70px; border: 3px solid white; border-radius: 5px; margin-top: 20px; animation: rotate 2s infinite; }
+        .phone-icon { 
+            width: 40px; height: 70px; border: 3px solid white; 
+            border-radius: 5px; margin-top: 20px; animation: rotate 2s infinite; 
+        }
         @keyframes rotate { 0% { transform: rotate(0deg); } 50%, 100% { transform: rotate(90deg); } }
     </style>
 </head>
@@ -175,18 +197,18 @@
 
     <div id="rotate-notice">
         <h2>🔄 MODO PAISAGEM</h2>
-        <p>Gire o dispositivo para jogar.</p>
+        <p>Por favor, gire seu celular para jogar.</p>
         <div class="phone-icon"></div>
     </div>
 
     <div id="game-modal">
         <div class="modal-content">
             <h2 id="modal-title">PAUSADO</h2>
-            <p id="score-info">Score: <span id="final-score">0</span></p>
+            <p>Score: <span id="final-score">0</span></p>
             <div class="button-group">
                 <button id="resume-btn" class="btn-ui btn-resume" onclick="resumeGame()">Continuar</button>
                 <button class="btn-ui" onclick="resetGame()">Reiniciar</button>
-                <a href="../../More_options.html" class="btn-ui btn-home">Voltar para Home</a>
+                <a href="#" class="btn-ui btn-home">Sair</a>
             </div>
         </div>
     </div>
@@ -216,10 +238,9 @@
         const modalTitle = document.getElementById("modal-title");
         const resumeBtn = document.getElementById("resume-btn");
         const rotateNotice = document.getElementById("rotate-notice");
-        const mobileControls = document.getElementById("mobile-controls");
 
         let gridSize = 25;
-        let snake, food, dx, dy, nextDx, nextDy, score;
+        let snake, food, dx, dy, nextDx, nextDy, score, tileCountX, tileCountY;
         let gameActive = false;
         let gamePaused = false;
         let gameLoop = null;
@@ -227,8 +248,11 @@
         const isMobile = /Mobi|Android|iPhone/i.test(navigator.userAgent);
 
         function init() {
-            checkOrientation();
-            window.addEventListener("resize", checkOrientation);
+            window.addEventListener("resize", () => {
+                checkOrientation();
+                resizeCanvas();
+            });
+            
             window.addEventListener("keydown", (e) => {
                 if(e.key === "ArrowUp") changeDir('UP');
                 if(e.key === "ArrowDown") changeDir('DOWN');
@@ -236,19 +260,19 @@
                 if(e.key === "ArrowRight") changeDir('RIGHT');
                 if(e.key === "Escape") pauseGame();
             });
+
+            checkOrientation();
+            resizeCanvas();
             resetGame();
         }
 
         function checkOrientation() {
             const isLandscape = window.innerWidth > window.innerHeight;
             if (isMobile && !isLandscape) {
-                pauseGame();
+                if (gameActive && !gamePaused) pauseGame();
                 rotateNotice.style.display = "flex";
-                mobileControls.style.display = "none";
             } else {
                 rotateNotice.style.display = "none";
-                if (isMobile) mobileControls.style.display = "grid";
-                resizeCanvas();
             }
         }
 
@@ -263,14 +287,17 @@
             modal.style.display = "none";
             score = 0;
             scoreElement.innerText = score;
-            snake = [{ x: 5, y: 5 }, { x: 4, y: 5 }];
+            // Centraliza a cobra no início
+            const startX = Math.floor(tileCountX / 2);
+            const startY = Math.floor(tileCountY / 2);
+            snake = [{ x: startX, y: startY }, { x: startX - 1, y: startY }];
             dx = 1; dy = 0; nextDx = 1; nextDy = 0;
             placeFood();
             resumeGame();
         }
 
         function pauseGame() {
-            if (!gameActive) return;
+            if (!gameActive || gamePaused) return;
             gamePaused = true;
             clearInterval(gameLoop);
             modalTitle.innerText = "PAUSADO";
@@ -297,12 +324,12 @@
         }
 
         function placeFood() {
-            tileCountX = Math.floor(canvas.width / gridSize);
-            tileCountY = Math.floor(canvas.height / gridSize);
             food = {
-                x: Math.floor(Math.random() * (tileCountX - 1)),
-                y: Math.floor(Math.random() * (tileCountY - 1))
+                x: Math.floor(Math.random() * (tileCountX - 2)) + 1,
+                y: Math.floor(Math.random() * (tileCountY - 2)) + 1
             };
+            // Evita comida aparecer dentro da cobra
+            if (snake.some(s => s.x === food.x && s.y === food.y)) placeFood();
         }
 
         function changeDir(dir) {
@@ -317,7 +344,9 @@
             dx = nextDx; dy = nextDy;
             const head = { x: snake[0].x + dx, y: snake[0].y + dy };
 
-            if (head.x < 0 || head.x >= tileCountX || head.y < 0 || head.y >= tileCountY || snake.some(s => s.x === head.x && s.y === head.y)) {
+            // Colisões
+            if (head.x < 0 || head.x >= tileCountX || head.y < 0 || head.y >= tileCountY || 
+                snake.some(s => s.x === head.x && s.y === head.y)) {
                 gameOver();
                 return;
             }
@@ -334,12 +363,18 @@
         }
 
         function render() {
+            // Limpa fundo
             ctx.fillStyle = "#0d0d1a";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            // Desenha comida (Neon)
             ctx.fillStyle = "#FF00FF";
             ctx.shadowBlur = 15;
             ctx.shadowColor = "#FF00FF";
             ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 2, gridSize - 2);
+
+            // Desenha cobra
+            ctx.shadowBlur = 10;
             ctx.shadowColor = "blueviolet";
             snake.forEach((part, i) => {
                 ctx.fillStyle = (i === 0) ? "white" : "blueviolet";
@@ -348,6 +383,7 @@
             ctx.shadowBlur = 0;
         }
 
+        // Inicia o motor do jogo
         init();
     </script>
 </body>
