--- a/pages/More_Options/Games/Snake.html
+++ b/pages/More_Options/Games/Snake.html
@@ -208,7 +208,7 @@
             <div class="button-group">
                 <button id="resume-btn" class="btn-ui btn-resume" onclick="resumeGame()">Continuar</button>
                 <button class="btn-ui" onclick="resetGame()">Reiniciar</button>
-                <a href="#" class="btn-ui btn-home">Sair</a>
+                <a href="../../More_options.html" class="btn-ui btn-home">Sair</a>
             </div>
         </div>
     </div>
