--- a/pages/More_Options/Games/Space.html
+++ b/pages/More_Options/Games/Space.html
@@ -183,7 +183,7 @@
             <div class="button-group">
                 <button id="resume-btn" class="btn-ui btn-resume" onclick="resumeGame()">Continuar</button>
                 <button class="btn-ui" onclick="resetGame()">Reiniciar</button>
-                <a href="/" class="btn-ui btn-home">Início</a>
+                <a href="../../More_options.html" class="btn-ui btn-home">Início</a>
             </div>
         </div>
     </div>
