--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -76,6 +76,8 @@
             width: 90%;
             max-width: 400px;
             position: relative;
+            max-height: 80vh;
+            overflow-y: auto;
         }
         
         .modal-option {
@@ -166,8 +168,36 @@
                 </li>
                 <li>
                     <a href="./More_Options/Games/Snake.html" class="modal-option">
-                        <i data-lucide="brain" class="w-5 h-5 mr-4 text-pink-300"></i>
+                        <i data-lucide="worm" class="w-5 h-5 mr-4 text-green-400"></i>
                         <span class="flex-grow">Snake</span>
+                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="./More_Options/Games/Space.html" class="modal-option">
+                        <i data-lucide="rocket" class="w-5 h-5 mr-4 text-indigo-400"></i>
+                        <span class="flex-grow">Space</span>
+                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="./More_Options/Games/Corrida.html" class="modal-option">
+                        <i data-lucide="car" class="w-5 h-5 mr-4 text-red-500"></i>
+                        <span class="flex-grow">Corrida</span>
+                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="./More_Options/Games/Labirinto.html" class="modal-option">
+                        <i data-lucide="grid-3x3" class="w-5 h-5 mr-4 text-yellow-500"></i>
+                        <span class="flex-grow">Labirinto</span>
+                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="./More_Options/Games/Voo.html" class="modal-option">
+                        <i data-lucide="plane" class="w-5 h-5 mr-4 text-cyan-400"></i>
+                        <span class="flex-grow">Voo</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
@@ -200,3 +230,4 @@
     </script>
 </body>
 </html>
+
