--- a/pages/More_Options/Games/Racer.html
+++ b/pages/More_Options/Games/Racer.html
@@ -255,7 +255,7 @@
         }, {passive: false});
         canvas.addEventListener('touchend', () => ship.isBoosting = false);
         startBtn.addEventListener('click', reset);
-        homeBtn.addEventListener('click', () => window.location.href = 'home.html');
+        homeBtn.addEventListener('click', () => window.location.href = '../../More_options.html');
         pauseBtn.addEventListener('click', () => { if(!gameActive) return; isPaused = !isPaused; overlay.classList.toggle('hidden', !isPaused); if(isPaused) { statusTitle.innerHTML = "PAUSADO"; startBtn.innerText = "RETOMAR"; } });
 
         document.getElementById('controls-info').innerHTML = isMobile ? "Toque: Salto | Toque Duplo: Boost" : "Espaço: Salto | Shift: Boost";
