--- a/pages/More_Options/Games/Other/Other_game.html
+++ b/pages/More_Options/Games/Other/Other_game.html
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <script src="data.js"></script>
+    <script src="Data.js"></script>
     <script src="Other_game.js"></script>
 </body>
 </html>
