--- a/pages/More_Options/Games/Other/Emulator.html
+++ b/pages/More_Options/Games/Other/Emulator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other_game</title>
+    <title>Violet Protocol | Executive Hub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="Other_game.css">
 </head>
@@ -12,14 +12,16 @@
     <nav class="nav-fixed">
         <div class="nav-top">
             <div class="nav-brand-group">
-                <button class="btn-home" onclick="goHome()">Início</button>
-                <h1>Other games</h1>
+                <a href="../../../More_options.html" style="text-decoration: none;">
+                    <button class="btn-home">Início</button>
+                </a>
+                <h1>VIOLET</h1>
             </div>
-            <span class="status-badge">SISTEMA DE EXECUÇÃO</span>
+            <span class="status-badge"><i class="fas fa-circle"></i> SYSTEM ONLINE</span>
         </div>
         <div class="search-bar">
             <div class="search-wrapper">
-                <input type="text" id="game-search" placeholder="Buscar jogo na base...">
+                <input type="text" id="game-search" placeholder="Procurar protocolo de execução...">
             </div>
         </div>
     </nav>
@@ -40,7 +42,7 @@
 
         <div class="player-view" id="player-view">
             <button class="btn-exit-engine" onclick="stopEngine()">
-                <i class="fas fa-times"></i> Sair do Jogo
+                <i class="fas fa-times"></i> SAIR DO JOGO
             </button>
             <iframe id="game-engine" src="" allowfullscreen></iframe>
         </div>
