--- a/pages/More/Wiki/Wiki.html
+++ b/pages/More/Wiki/Wiki.html
@@ -24,11 +24,11 @@
             <i class="fas fa-satellite-dish"></i> INÍCIO
         </a>
         
-        <nav class="sidebar-nav">
+       <!-- <nav class="sidebar-nav">
             <ul>
                <li><a href="../../Abaut.html"><i class="fas fa-info-circle"></i>sobre</a></li>
             </ul>
-        </nav>
+        </nav>-->
         <div class="sidebar-footer">
              <p>&copy; 2025 FanWiki</p>
         </div>
