--- a/Index.html
+++ b/Index.html
@@ -112,7 +112,7 @@ body{
 </div>
 
 <div class="app-container" id="app">
-    <iframe src="https://example.com" allowfullscreen></iframe>
+    <iframe src="./Home.html" allowfullscreen></iframe>
 </div>
 
 <script>
