--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -140,7 +140,7 @@
             </button>
         </div>
         <nav class="sidebar-nav">
-            <a href="../Index.html"><i class="fas fa-home" style="margin-right:15px"></i> Página Inicial</a>
+            <a href="../Home.html"><i class="fas fa-home" style="margin-right:15px"></i> Página Inicial</a>
         </nav>
     </div>
 
