--- a/pages/More/Wiki/Wiki.html
+++ b/pages/More/Wiki/Wiki.html
@@ -20,7 +20,7 @@
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         
-        <a href="../../../Index.html" class="nav-logo-btn" title="Ir para Home">
+        <a href="../../../Home.html" class="nav-logo-btn" title="Ir para Home">
             <i class="fas fa-satellite-dish"></i> INÍCIO
         </a>
         
