--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -120,7 +120,7 @@
                 
                 <ul class="space-y-1">
                     <li>
-                        <a href="../Index.html" class="menu-item-link">
+                        <a href="../Home.html" class="menu-item-link">
                             <i data-lucide="home" class="w-5 h-5 mr-4" style="color: var(--primary-color);"></i>
                             <span class="flex-grow">Home</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
