--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FanWiki | News Feed</title>
     <link rel="icon" type="image/x-icon" href="./src/favicon.png"> 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -13,7 +12,7 @@
     
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
-            <h2 class="logo">FanWiki</h2>
+            <h2 class="logo">LoreWiki</h2>
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         <nav class="sidebar-nav">
@@ -22,7 +21,7 @@
             </ul>
         </nav>
         <div class="sidebar-footer">
-             <p>&copy; 2025 FanWiki</p>
+             <p>&copy; 2025 LoreWiki</p>
         </div>
     </aside>
     <div id="overlay" class="overlay"></div>
