--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoreSpace - Characters</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -134,7 +133,7 @@
 
     <div class="sidebar">
         <div class="sidebar-header">
-            <span>FanWiki</span>
+            <span>LoreWiki</span>
             <button class="close-sidebar" onclick="document.body.classList.remove('menu-open')">
                 <i class="fas fa-times"></i>
             </button>
