--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -138,7 +138,7 @@
             </button>
         </div>
         <nav class="sidebar-nav">
-            <a href="#"><i class="fas fa-home" style="margin-right:15px"></i> Página Inicial</a>
+            <a href="../Home.html"><i class="fas fa-home" style="margin-right:15px"></i> Página Inicial</a>
         </nav>
     </div>
 
