--- a/pages/More/Wiki/Wiki.html
+++ b/pages/More/Wiki/Wiki.html
@@ -15,7 +15,7 @@
 
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
-            <h2 class="sidebar-logo">LoreWiki</h2>
+            <h2 class="sidebar-logo">LoreSpace</h2>
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         
