--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
-            <h2 class="logo">LoreWiki</h2>
+            <h2 class="logo">LoreSpace</h2>
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         <nav class="sidebar-nav">
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="sidebar-footer">
-             <p>&copy; 2025 LoreWiki</p>
+             <p>&copy; 2025 LoreSpace</p>
         </div>
     </aside>
     <div id="overlay" class="overlay"></div>
