--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LoreWiki</title>
+<title>LoreSpace</title>
 <link rel="icon" type="image/x-icon" href="./src/favico.png">
 
 <style>
@@ -107,8 +107,8 @@ body{
 <body>
 
 <div class="splash" id="splash">
-    <div class="logo">LW</div>
-    <div class="subtitle">LoreWiki</div>
+    <div class="logo">LS</div>
+    <div class="subtitle">LoreSpace</div>
     <div class="loader"></div>
 </div>
 
