--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LoreSpace</title>
-<link rel="icon" type="image/x-icon" href="./src/favico.png">
+<link rel="icon" type="image/x-icon" href="./src/Favico.png">
 
 <style>
 :root{
