--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu de Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -133,6 +134,14 @@
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </div>
                     </li>
+
+                    <li>
+                        <a href="./More/Games.html" class="menu-item-link">
+                            <i data-lucide="trophy" class="w-5 h-5 mr-4 text-purple-400"></i>
+                            <span class="flex-grow">Games</span>
+                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                        </a>
+                    </li>
                 </ul>
             </section>
         </main>
@@ -183,13 +192,6 @@
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
-               <!-- <li>
-                    <a href="./More_Options/Games/Labirinto.html" class="modal-option">
-                        <i data-lucide="grid-3x3" class="w-5 h-5 mr-4 text-yellow-500"></i>
-                        <span class="flex-grow">Labirinto</span>
-                        <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
-                    </a>
-                </li>-->
             </ul>
         </div>
     </div>
@@ -203,7 +205,7 @@
             const quizModal = document.getElementById('quiz-modal');
             const closeQuizModalButton = document.getElementById('close-quiz-modal-button');
             
-            // Função para abrir modal
+            // Função para abrir modal de Mini-games
             quizButton.addEventListener('click', () => {
                 quizModal.classList.remove('hidden');
                 document.body.style.overflow = 'hidden'; // Previne scroll no fundo
