--- a/pages/More/Books.html
+++ b/pages/More/Books.html
@@ -127,7 +127,7 @@
 
     <header class="header">
         <div class="search-pill">
-            <a href="../../Home.html" class="back-btn" title="Ir para Home" id="btn-home">
+            <a href="../More_Options.html" class="back-btn" title="Ir para Home" id="btn-home">
                 <i class="fas fa-arrow-left"></i>
             </a>
             <input type="text" id="search-input" placeholder="Pesquisar resumo ou livro...">
