--- a/pages/More/Games.html
+++ b/pages/More/Games.html
@@ -99,7 +99,7 @@
 
     <header class="header">
         <div class="search-pill">
-            <a href="../More_Options.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
+            <a href="../More_options.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
             <input type="text" id="search-input" placeholder="Pesquisar jogos...">
             <i class="fas fa-microphone" id="mic-trigger" style="color: var(--primary); cursor: pointer; font-size: 20px;"></i>
         </div>
