--- a/Home.html
+++ b/Home.html
@@ -59,6 +59,9 @@
             <a href="pages/Characters.html" class="tab-button">
                 <i class="fas fa-dragon"></i>Characters
             </a>
+            <a href="pages/Studio.html" class="tab-button">
+                <i class="fas fa-plus"></i>Studio
+            </a>
             <a href="./pages/More_options.html" class="tab-button">
                 <i class="fas fa-ellipsis-v"></i>More
             </a>
