--- a/pages/Studio.html
+++ b/pages/Studio.html
@@ -208,7 +208,7 @@
 <body>
 
     <header class="header">
-        <a href="index.html" class="nav-link-btn">
+        <a href="../Home.html" class="nav-link-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
         <h1>Studio</h1>
