--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,7 @@ body{
 </div>
 
 <div class="app-container" id="app">
-    <iframe src="./Home.html" allowfullscreen></iframe>
+    <iframe src="./j.html" allowfullscreen></iframe>
 </div>
 
 <script>
