--- a/pages/More/Studio/3d/3d.html
+++ b/pages/More/Studio/3d/3d.html
@@ -106,7 +106,7 @@
 </head>
 <body>
 
-    <a href="../../../../Home.html" class="nav-link-btn" title="Ir para próxima página">
+    <a href="../../../Studio.html" class="nav-link-btn" title="Ir para próxima página">
         <i data-lucide="arrow-right"></i>
     </a>
 
