--- a/pages/Studio.html
+++ b/pages/Studio.html
@@ -158,7 +158,7 @@
                 type: "list",
                 options: [
                     { name: "Arte Digital", icon: "🖌️", url: "arte-digital.html" },
-                    { name: "Modelagem 3D", icon: "🧊", url: "./more/Studio/3d/3d.html" }
+                    { name: "Modelagem 3D", icon: "🧊", url: "./More/Studio/3d/3d.html" }
                 ]
             },
             games: {
