--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -196,7 +196,7 @@
                 <img id="p-avatar" src="" class="profile-avatar-big">
             </div>
             <div class="profile-body">
-                <h1 id="p-name" style="text-align:center; margin-bottom:5px;">LoreWiki</h1>
+                <h1 id="p-name" style="text-align:center; margin-bottom:5px;">LoreSpace</h1>
                 <p id="p-category" style="text-align:center; color:var(--primary-light); font-weight:600;"></p>
                 
                 <div id="desc-container">
