--- a/pages/More/Wiki/Wiki.html
+++ b/pages/More/Wiki/Wiki.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>-->
         <div class="sidebar-footer">
-             <p>&copy; 2025 LoreWiki</p>
+             <p>&copy; 2025 LoreSpace</p>
         </div>
     </aside>
     
