--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -111,7 +111,7 @@
             <button class="close-sidebar" onclick="document.body.classList.remove('menu-open')"><i class="fas fa-times"></i></button>
         </div>
         <nav class="sidebar-nav">
-            <a href="#"><i class="fas fa-home" style="margin-right:15px"></i> Início</a>
+            <a href="../Home.html"><i class="fas fa-home" style="margin-right:15px"></i> Início</a>
         </nav>
     </div>
 
