--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -47,7 +47,7 @@
 
         /* --- LISTA PRINCIPAL --- */
         .direct-container { 
-            width: 100%; max-width: var(--list-width-desktop); height: 100vh; 
+            width: 100%; width: var(--list-width-desktop); height: 100vh; 
             display: flex; flex-direction: column; background: var(--glass-bg); 
             backdrop-filter: blur(var(--blur-value)); border-right: 1px solid var(--glass-border); 
             z-index: 10; flex-shrink: 0; transition: 0.3s;
