--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -27,7 +27,7 @@
                 <div class="profile-info-text">
                     <h1>LoreSpace</h1>
                     <div class="social-horizontal">
-                        <a href="index.html" class="social-btn" title="Home"><i class="fas fa-home"></i></a>
+                        <a href="../Home.html" class="social-btn" title="Home"><i class="fas fa-home"></i></a>
                         <button class="social-btn" onclick="openNetworkModal()" title="Redes Sociais"><i class="fas fa-share-nodes"></i></button>
                     </div>
                 </div>
