--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -169,8 +169,8 @@
             <button class="modal-close" onclick="closeAllModals()">&times;</button>
             <h3>Canais Oficiais</h3>
             <div class="network-grid">
-                <a href="https://whatsapp.com/channel/0029Vb78G0pDTkKDA6AsBO32" class="net-item"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                <a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg==" class="net-item"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="https://whatsapp.com/channel/0029Vb78G0pDTkKDA6AsBO32" target="_blank" class="net-item"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                <a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg==" target="_blank" class="net-item"><i class="fab fa-instagram"></i> Instagram</a>
             </div>
         </div>
     </div>
