--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoreSpace - Abaut</title>
+    <title>LoreSpace - Sobre</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Abaut.css">
@@ -93,39 +93,11 @@
             </section>
 
             <section id="comunidade" class="tab-section">
-                <div class="top-tab-bar">
-                    <button class="top-tab-item active" data-sub="agradecimentos">Agradecimentos</button>
-                    <button class="top-tab-item" data-sub="sobre-nos">Sobre Nós</button>
-                </div>
-
                 <div id="agradecimentos" class="sub-section active">
                     <div class="card-glass wide-card">
                         <i class="fas fa-heart"></i>
-                        <p>Nosso agradecimento a todos que apoiam a jornada da LoreSpace.</p>
-                    </div>
-                </div>
-
-                <div id="sobre-nos" class="sub-section">
-                    <div class="card-glass info-block">
-                        <div class="info-item">
-                            <i class="fas fa-rocket"></i>
-                            <h3>Nossa Missão</h3>
-                            <p>Proporcionar design de elite e organização para os maiores entusiastas de lore. Criamos interfaces imersivas para universos complexos.</p>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-eye"></i>
-                            <h3>Nossa Visão</h3>
-                            <p>Ser a plataforma de referência global para a exploração visual e técnica de histórias e mundos fantásticos.</p>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-gem"></i>
-                            <h3>Nossos Valores</h3>
-                            <ul class="values-list">
-                                <li><strong>• Qualidade Premium:</strong> Estética impecável em cada pixel.</li>
-                                <li><strong>• Foco no Fã:</strong> Criado por quem vive a cultura do lore.</li>
-                                <li><strong>• Transparência:</strong> Ética e clareza com nossa comunidade.</li>
-                            </ul>
-                        </div>
+                        <h3>Gratidão</h3>
+                        <p>Nosso agradecimento sincero a todos que apoiam a jornada da LoreSpace e ajudam a construir este universo.</p>
                     </div>
                 </div>
             </section>
