Update default search query to 'Pop'

--- a/pages/More/Music.html
+++ b/pages/More/Music.html
@@ -541,16 +541,14 @@
             document.getElementById(`btn-page-${index}`).classList.add('active');
         }
 
-        // --- ATUALIZAÇÃO: Busca automática ao abrir ---
         async function search(q = '') {
-            // Se q for vazio e o input também estiver vazio (abertura da página), usa um padrão
-            const query = q || document.getElementById('search-input').value || 'Músicas em Alta';
+            const query = q || document.getElementById('search-input').value || 'Pop';
             try {
                 const res = await fetch(`https://itunes.apple.com/search?term=${encodeURIComponent(query)}&entity=song&limit=30`);
                 const data = await res.json();
                 trackList = data.results;
                 renderGrid();
-                if(!q) checkUrlParam();
+                if(!q) checkUrlParam(); // Só checa URL se não for busca por voz
             } catch (e) { console.error("Erro na busca", e); }
         }
 
@@ -758,9 +756,8 @@
 
         document.getElementById('search-input').onkeypress = e => { if(e.key==='Enter') search(); };
 
-        // --- INICIALIZAÇÃO COMPLETA ---
         initGestures();
-        search(); // Dispara a renderização de sugestões ao carregar
+        search();
     </script>
 </body>
 </html>
