Update links to Wiki pages for Games, Music, and Books

--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -164,21 +164,21 @@
             
             <ul class="space-y-2">
                 <li>
-                    <a href="./More/Games.html" class="modal-option">
+                    <a href="./More/Wiki/Games.html" class="modal-option">
                         <i data-lucide="trophy" class="w-5 h-5 mr-4 text-purple-400"></i>
                         <span class="flex-grow">Games</span>
                         <i data-lucide="chevron-right" class="w-4 h-4 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="./More/Music.html" class="modal-option">
+                    <a href="./More/Wiki/Music.html" class="modal-option">
                         <i data-lucide="music" class="w-5 h-5 mr-4 text-green-400"></i>
                         <span class="flex-grow">Music</span>
                         <i data-lucide="chevron-right" class="w-4 h-4 text-[var(--text-color-muted)]"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="./More/Books.html" class="modal-option">
+                    <a href="./More/Wiki/Books.html" class="modal-option">
                         <i data-lucide="book-open" class="w-5 h-5 mr-4 text-orange-400"></i>
                         <span class="flex-grow">Books</span>
                         <i data-lucide="chevron-right" class="w-4 h-4 text-[var(--text-color-muted)]"></i>
