Fix link path in Games.html for navigation

--- a/pages/More/Wiki/Games.html
+++ b/pages/More/Wiki/Games.html
@@ -111,7 +111,7 @@
 <body>
 
     <header class="header">
-        <a href="../More_options.html" class="nav-btn" title="Voltar">
+        <a href="../../More_options.html" class="nav-btn" title="Voltar">
             <i class="fas fa-arrow-left"></i>
         </a>
         
