--- a/pages/More/Wiki/Music.html
+++ b/pages/More/Wiki/Music.html
@@ -211,7 +211,7 @@
 <body>
 
     <header class="header">
-        <a href="../More_options.html" class="nav-back-btn"><i class="fas fa-arrow-left"></i></a>
+        <a href="../../More_options.html" class="nav-back-btn"><i class="fas fa-arrow-left"></i></a>
         <div class="search-pill">
             <input type="text" id="search-input" placeholder="O que vamos ouvir agora?">
             <i class="fas fa-microphone voice-btn" onclick="startVoiceSearch()"></i>
