Fix back button link in Books.html

--- a/pages/More/Wiki/Books.html
+++ b/pages/More/Wiki/Books.html
@@ -114,7 +114,7 @@
 
     <header class="header">
         <div class="search-pill">
-            <a class="back-btn" href="../More_options.html"><i class="fas fa-arrow-left"></i></a>
+            <a class="back-btn" href="../../More_options.html"><i class="fas fa-arrow-left"></i></a>
             <input type="text" id="search-input" placeholder="Pesquisar resumo ou livro...">
             <i class="fas fa-microphone" id="mic-trigger" style="color: var(--primary); cursor: pointer; font-size: 22px; padding: 5px;"></i>
         </div>
