Fix typo in redirect URL for goToHome function

--- a/pages/More/Wiki/Characters.html
+++ b/pages/More/Wiki/Characters.html
@@ -254,7 +254,7 @@
 function googleTranslateElementInit() { new google.translate.TranslateElement({pageLanguage: 'pt', autoDisplay: false}, 'google_translate_element'); }
 
 function goToHome() {
-    window.location.assign('../../More_Options.html');
+    window.location.assign('../../More_options.html');
 }
 
 let wikiData = [];
