--- a/pages/More/Wiki/Characters.html
+++ b/pages/More/Wiki/Characters.html
@@ -318,12 +318,15 @@ document.getElementById('clear-search').onclick = () => {
     render(wikiData);
 };
 
-// PERFIL
+// PERFIL (ALTERADO PARA ESCONDER O ESTADO VAZIO)
 function openHub(name) {
     const p = wikiData.find(i => i.name === name);
     if(!p) return;
 
-    if(document.getElementById('empty-state')) document.getElementById('empty-state').style.display = 'none';
+    // AQUI ESTÁ A ALTERAÇÃO: ESCONDE O ASTRONAUTA E TEXTO INICIAL
+    const empty = document.getElementById('empty-state');
+    if(empty) empty.style.display = 'none';
+    
     document.getElementById('hub-main-content').classList.remove('hidden');
     document.getElementById('profile-hub').style.display = 'flex';
 
